# eurobot2k15

./: .gitignore  CMakeLists.txt  Config.xml  MotionConfig.xml  README.md  Toolchain-ARM.cmake  eurobot2k15.cbp
libs/: dependencies.txt
src/: CMakeLists.txt  Robot.cpp  Robot.cpp.orig
src/core/: AbstractMessageHandler.cpp  AbstractMessageHandler.h  CMakeLists.txt  CancelTaskNotification.cpp  CancelTaskNotification.h  CommandProcessor.cpp  CommandProcessor.h  CommandSource.cpp  CommandSource.h  ExecutorManager.cpp  ExecutorManager.h  JSScheduler.cpp  JSScheduler.h  JavaScriptVM.cpp  JavaScriptVM.h  Logger.cpp  Logger.h  Node.cpp  Node.h  NotificationHandler.cpp  NotificationHandler.h  NotificationSource.cpp  NotificationSource.h  Scheduler.cpp  Scheduler.h  TaskManager.cpp  TaskManager.h  TaskManagerInterface.cpp  TaskManagerInterface.h  TaskStateChangeNotification.cpp  TaskStateChangeNotification.h
src/drivers/: CMakeLists.txt
src/drivers/actuators/: CMakeLists.txt  ElectroSwitch.cpp  ElectroSwitch.h  Servos.cpp  Servos.h
src/drivers/motion/: CMakeLists.txt  MotionDriver.cpp  MotionDriver.h
src/drivers/sensors/: BeaconDriver.cpp  BeaconDriver.h  BrkonDriver.cpp  BrkonDriver.h  CMakeLists.txt  SensorDriver.cpp  SensorDriver.h
src/executors/: AbstractActuator.h  AbstractExecutor.cpp  AbstractExecutor.h  AbstractLiftExecutor.cpp  AbstractLiftExecutor.cpp.autosave  AbstractLiftExecutor.h  CMakeLists.txt  ExampleExecutor.cpp  ExampleExecutor.h  ExecutorCommon.cpp  ExecutorCommon.h  ExecutorConfig.cpp  ExecutorConfig.h  ModbusExecutor.cpp  ModbusExecutor.h  MotionExecutor.cpp  MotionExecutor.cpp.orig  MotionExecutor.h
src/executors/carpet/: CMakeLists.txt  CarpetExecutor.cpp  CarpetExecutor.h
src/executors/enemyDetector/: CMakeLists.txt  EnemyDetector.cpp  EnemyDetector.cpp.orig  EnemyDetector.h
src/executors/flap/: CMakeLists.txt  FlapExecutor.cpp  FlapExecutor.cpp.autosave  FlapExecutor.h  FlapExecutor.h.autosave
src/executors/jumpers/: CMakeLists.txt  jumpers.cpp  jumpers.h
src/executors/liftcenter/: CMakeLists.txt  LiftCenterExecutor.cpp  LiftCenterExecutor.h
src/executors/liftleft/: CMakeLists.txt  LiftLeftExecutor.cpp  LiftLeftExecutor.h
src/executors/liftright/: CMakeLists.txt  LiftRightExecutor.cpp  LiftRightExecutor.h
src/executors/msg/: ActuatorCommand.cpp  ActuatorCommand.h  CMakeLists.txt  CountdownCommand.cpp  CountdownCommand.h  EnemyDetectedNotification.cpp  EnemyDetectedNotification.h  EnemyDetectorCommand.cpp  EnemyDetectorCommand.cpp.orig  EnemyDetectorCommand.h  EnemyDetectorCommand.h.orig  GetLiftState.cpp  GetLiftState.h  GetModbusState.cpp  GetModbusState.h  GetMotionState.cpp  GetMotionState.h  LIftNotification.cpp  LIftNotification.h  LiftNotification.cpp  LiftNotification.h  ModbusCommand.cpp  ModbusCommand.h  ModbusNotification.cpp  ModbusNotification.h  MotionCommand.cpp  MotionCommand.h  MotionNotification.cpp  MotionNotification.h  SideNotification.cpp  SideNotification.h  TimePassed.cpp  TimePassed.h
src/executors/popcorn/: CMakeLists.txt  PopcornExecutor.cpp  PopcornExecutor.h
src/executors/servo/: CMakeLists.txt
src/executors/servo/ServoTest/: CMakeLists.txt  ServoCommand.cpp  ServoCommand.h  ServosExecutor.cpp  ServosExecutor.h
src/messages/: CMakeLists.txt  Command.cpp  Command.h  CommandResponse.cpp  CommandResponse.h  Message.cpp  Message.h  Notification.cpp  Notification.h  StartMatchMessage.cpp  StartMatchMessage.h  StopMessage.cpp  StopMessage.h
src/plugins/: CMakeLists.txt  Geometry.cpp  Geometry.h  WebServer.cpp  WebServer.h
src/tasks/: AbstractTask.cpp  AbstractTask.h  AbstractTask.h.autosave  CMakeLists.txt  JavaScriptTask.cpp  JavaScriptTask.h  PipeTask.cpp  PipeTask.h  ServoTask.cpp  ServoTask.h  TestTask.cpp  TestTask.h
src/utils/: CMakeLists.txt
src/utils/containers/: CMakeLists.txt  StateMap.cpp  StateMap.h  StatePriorityQueue.cpp  StatePriorityQueue.h
src/utils/geometry/: CMakeLists.txt  DisplacementVector.cpp  DisplacementVector.h  GeometryUtil.cpp  GeometryUtil.h  Point2D.cpp  Point2D.h
src/utils/gpio/: CMakeLists.txt  gpio.cpp  gpio.h
src/utils/helper/: BeaconData.cpp  BeaconData.h  CMakeLists.txt  LiftState.h  MotionState.cpp  MotionState.h  SleepTimer.cpp  SleepTimer.h
src/utils/javascript/: CMakeLists.txt  JavaScriptMessage.cpp  JavaScriptMessage.h  JavaScriptMessageFactory.cpp  JavaScriptMessageFactory.h  JavaScriptMessageProvider.cpp  JavaScriptMessageProvider.h  ObjectWrap.cpp  ObjectWrap.h
src/utils/modbus/: CMakeLists.txt  ModbusClient.cpp  ModbusClient.h  ModbusClientSwitzerland.cpp  ModbusClientSwitzerland.h  ModbusMaster.cpp  ModbusMaster.h  ModbusSensoreClient.cpp  ModbusSensoreClient.h
src/utils/pathFinding/: CMakeLists.txt  PathFinding.cpp  PathFinding.h  PathFindingNode.cpp  PfPoint2D.h
src/utils/rs485/: CMakeLists.txt  rs485.cpp  rs485.h
src/utils/uart/: CMakeLists.txt  UartConnection.cpp
strategies/: homologacija.xml  standard_scheduler.js  standard_strategy.xml
strategies/tasks/: casa_nasa_dole.js  casa_nasa_gore.js  debeg_task.js  finalize_task.js  homologacija.js  init.js  klapna_njihova.js  klapne_nase.js  loptice.js  monitor.js  odguraj_casu_nasu.js  read_position.js  sleep_task.js  start_move.js  start_move_1000.js  start_move_loptica.js  test_kretanja.js  test_pf.js  test_utils.js  tome_test.js  tri_valjka.js  tri_valjka_kula5.js  tri_valjka_loptica.js  tri_valjka_odjednom.js  unload_all_start.js  unload_casa_enemy.js  unload_casa_start.js  unload_lights_center.js  unload_lights_start.js  unload_loptice.js  utils.js  valjak_drugi_stepeniste.js  valjak_gore_ugao.js  valjak_prvi_stepeniste.js
